# itmo-cpp-labs

./: README.md
OPLAB1/: CMakeLists.txt  README.md  functions.cpp  functions.h
OPLAB2/: CMakeLists.txt  README.md
OPLAB2/include/: CMakeLists.txt  menu.cpp  menu.h  textfile.cpp  textfile.h
OPLAB3/: CMakeLists.txt  README.md
OPLAB3/include/: CMakeLists.txt  set.cpp  set.h  square.cpp  square.h
OPLAB4/: CMakeLists.txt  README.md
OPLAB4/include/: CMakeLists.txt  circle.cpp  circle.h  ellipse.cpp  ellipse.h  round_geo_figure.h
OPLAB5/: CMakeLists.txt  README.md  main.cpp  template_func.cpp  template_func.h  template_stack.cpp  template_stack.h
OPLAB6/: CMakeLists.txt  README.md  c_types.h  main.cpp  stl_functions.h
OPLAB7/: CMakeLists.txt  README.md  buffer.h  main.cpp
OPLAB8_OpenGL/: CMakeLists.txt  README.md  RubicsCube.cpp  RubicsCube.h  cube_state.txt  main.cpp
OPLAB8_OpenGL/lib/glew-cmake/: README.md  README_glew.md
OPLAB8_OpenGL/lib/glew-cmake/doc/: basic.html  index.html  install.html
OPLAB8_OpenGL/lib/glfw/: README.md
OPLAB8_OpenGL/lib/glfw/docs/: CONTRIBUTING.md  Doxyfile.in  quick.dox  window.dox
OPLAB8_OpenGL/lib/glfw/src/: context.c  egl_context.c  input.c  mappings.h  mappings.h.in  vulkan.c  wgl_context.c  win32_joystick.c  win32_monitor.c
OPLAB8_OpenGL/lib/glm/: manual.md  readme.md
OPLAB8_OpenGL/lib/glm/doc/: man.doxy
OPLAB9/: CMakeLists.txt  OPLAB9_report_Ким Александр_M3119.docx  README.md  curl_request.h  currency_class.h  main.cpp  out.txt  parser_class.h  request_class.h
OPLAB9/pugixml-1.14/src/: pugiconfig.hpp
(+129 files in other folders)
